--- a/product-list.html
+++ b/product-list.html
@@ -38,11 +38,15 @@
         </div>
         <div class="grid-item">
           <a href="product.html">
-            <img src="assets/1165.webp" alt="Black Fleece Jacket" />
+            <img src="assets/1534.webp" alt="Black Round Neck T-shirt" />
           </a>
-          <h3>Black Fleece Jacket</h3>
+          <h3>Black Round Neck T-Shirt</h3>
           <p class="sub-title">Puma</p>
-          <p class="price">3999 DKK</p>
+          <p class="price">659 DKK</p>
+          <div class="discount">
+            <p>499 DKK</p>
+            <p>-20%</p>
+          </div>
         </div>
         <div class="grid-item">
           <a href="product.html">
