--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
     <header>
       <nav>
         <ul>
+          <li>
+            <a class="logo" href="index.html"
+              ><img src="assets/logo-baseline-2.png" alt="Grey Solid Round Neck T-Shirt"
+            /></a>
+          </li>
           <li><a href="product-list.html">PRODUCTS</a></li>
-          <li><a href="index.html">HOME</a></li>
-          <li><a href="#">CART (2)</a></li>
+          <li><a href="#">ABOUT</a></li>
+          <li><a href="#">CART</a></li>
         </ul>
       </nav>
     </header>
