--- a/product-list.html
+++ b/product-list.html
@@ -12,9 +12,14 @@
     <header>
       <nav>
         <ul>
+          <li>
+            <a class="logo" href="index.html"
+              ><img src="assets/logo-baseline-2.png" alt="Grey Solid Round Neck T-Shirt"
+            /></a>
+          </li>
           <li><a href="product-list.html">PRODUCTS</a></li>
-          <li><a href="index.html">HOME</a></li>
-          <li><a href="#">CART (2)</a></li>
+          <li><a href="#">ABOUT</a></li>
+          <li><a href="#">CART</a></li>
         </ul>
       </nav>
     </header>
@@ -42,14 +47,14 @@
           </a>
           <h3>Black Round Neck T-Shirt</h3>
           <p class="sub-title">Puma</p>
-          <p class="price">659 DKK</p>
-          <div class="discount">
+          <p class="old-price">659 DKK</p>
+          <div class="new-price">
             <p>499 DKK</p>
-            <p>-20%</p>
+            <p class="discount">-20%</p>
           </div>
         </div>
-        <div class="grid-item">
-          <a href="product.html">
+        <div class="grid-item sold-out">
+          <a href="#">
             <img src="assets/1526.webp" alt="Big Cat Backpack Black" />
           </a>
           <h3>Big Cat Backpack Black</h3>
