--- a/product.html
+++ b/product.html
@@ -13,13 +13,32 @@
     <header>
       <nav>
         <ul>
+          <li>
+            <a class="logo" href="index.html"
+              ><img src="assets/logo-baseline-2.png" alt="Grey Solid Round Neck T-Shirt"
+            /></a>
+          </li>
           <li><a href="product-list.html">PRODUCTS</a></li>
-          <li><a href="index.html">HOME</a></li>
-          <li><a href="#">CART (2)</a></li>
+          <li><a href="#">ABOUT</a></li>
+          <li><a href="#">CART</a></li>
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section class="product-card">
+        <img src="assets/1531.webp" alt="Grey Solid Round Neck T-Shirt" />
+        <div class="product-info">
+          <h1>Grey Solid Round Neck T-Shirt</h1>
+          <h2>Color</h2>
+          <p class="info">Grey</p>
+          <h2>Brand</h2>
+          <p class="info">Puma</p>
+          <h2>Inventory number</h2>
+          <p class="info">1531</p>
+          <button class="buy">PURCHASE</button>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
