--- a/product.html
+++ b/product.html
@@ -35,6 +35,18 @@
           <p class="info">Puma</p>
           <h2>Inventory number</h2>
           <p class="info">1531</p>
+        </div>
+        <div class="purchase-box">
+          <form class="size">
+            <label>
+              Choose a size:
+              <select name="size">
+                <option>S</option>
+                <option>M</option>
+                <option>L</option>
+              </select>
+            </label>
+          </form>
           <button class="buy">PURCHASE</button>
         </div>
       </section>
