--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
       <nav>
         <ul>
           <li>
-            <a class="logo" href="index.html"
-              ><img src="assets/logo-baseline-2.png" alt="Grey Solid Round Neck T-Shirt"
-            /></a>
+            <a class="logo" href="index.html"><img src="assets/activewear.png" alt="logo" /></a>
           </li>
           <li><a href="product-list.html">PRODUCTS</a></li>
           <li><a href="#">ABOUT</a></li>
@@ -26,7 +24,7 @@
     <section class="hero">
       <img src="assets/run.jpg" alt="Forside baggrund" class="hero-img" />
       <div class="hero-content">
-        <img class="hero-logo" src="assets/logo-baseline-2.png" />
+        <img class="hero-logo" src="assets/activewear.png" />
         <div class="hero-buttons">
           <a href="product-list.html">ACCESSORIES</a>
           <a href="product-list.html">APPAREL</a>
