--- a/product.html
+++ b/product.html
@@ -14,9 +14,7 @@
       <nav>
         <ul>
           <li>
-            <a class="logo" href="index.html"
-              ><img src="assets/logo-baseline-2.png" alt="Grey Solid Round Neck T-Shirt"
-            /></a>
+            <a class="logo" href="index.html"><img src="assets/activewear.png" alt="logo" /></a>
           </li>
           <li><a href="product-list.html">PRODUCTS</a></li>
           <li><a href="#">ABOUT</a></li>
