--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="da">
+<html lang="en">
   <link rel="stylesheet" href="css/general.css" />
   <link rel="stylesheet" href="css/header.css" />
   <link rel="stylesheet" href="css/forside.css" />
