tilføjer js og sold out

--- a/ekstra.html
+++ b/ekstra.html
@@ -27,7 +27,7 @@
       <p class="discount">-20%</p>
     </div>
   </div>
-  <div class="grid-item sold-out">
+  <div class="grid-item soldOut">
     <a href="#">
       <img src="assets/1526.webp" alt="Big Cat Backpack Black" />
     </a>
@@ -63,7 +63,7 @@
       <p class="discount">-20%</p>
     </div>
   </div>
-  <div class="grid-item sold-out">
+  <div class="grid-item soldOut">
     <a href="#">
       <img src="assets/1526.webp" alt="Big Cat Backpack Black" />
     </a>
@@ -99,7 +99,7 @@
       <p class="discount">-20%</p>
     </div>
   </div>
-  <div class="grid-item sold-out">
+  <div class="grid-item soldOut">
     <a href="#">
       <img src="assets/1526.webp" alt="Big Cat Backpack Black" />
     </a>
