--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
           <a href="product-list.html">ACCESSORIES</a>
           <a href="product-list.html">APPAREL</a>
           <a href="product-list.html">FOOTWEAR</a>
+          <a href="product-list.html">PERSONAL CARE</a>
+          <a href="product-list.html">SPORTING GOODS</a>
+          <a href="product-list.html">FREE ITEMS</a>
         </div>
       </div>
     </section>
