--- a/index.html
+++ b/index.html
@@ -25,16 +25,10 @@
       <img src="assets/run.jpg" alt="Forside baggrund" class="hero-img" />
       <div class="hero-content">
         <img class="hero-logo" src="assets/activewear.png" />
-        <div class="hero-buttons">
-          <a href="product-list.html">ACCESSORIES</a>
-          <a href="product-list.html">APPAREL</a>
-          <a href="product-list.html">FOOTWEAR</a>
-          <a href="product-list.html">PERSONAL CARE</a>
-          <a href="product-list.html">SPORTING GOODS</a>
-          <a href="product-list.html">FREE ITEMS</a>
-        </div>
+        <div class="categorylist"></div>
       </div>
     </section>
     <footer></footer>
+    <script src="js/index.js"></script>
   </body>
 </html>
