--- a/product-list.html
+++ b/product-list.html
@@ -21,8 +21,8 @@
         </ul>
       </nav>
     </header>
+    <h2>Apparel</h2>
     <main id="productContainer">
-     
       </section>
     </main>
     <footer></footer>
