--- a/product-list.html
+++ b/product-list.html
@@ -15,13 +15,19 @@
           <li>
             <a class="logo" href="index.html"><img src="assets/activewear.png" alt="logo" /></a>
           </li>
-          <li><a href="product-list.html">PRODUCTS</a></li>
+          <li><a href="#">PRODUCTS</a></li>
           <li><a href="#">ABOUT</a></li>
           <li><a href="#">CART</a></li>
         </ul>
       </nav>
     </header>
     <h2>Apparel</h2>
+    <section id="filters">
+  <button data-gender="All">All</button>
+  <button data-gender="Unisex">Unisex</button>
+  <button data-gender="Men">Men</button>
+  <button data-gender="Women">Women</button>
+</section>
     <main id="productContainer">
       </section>
     </main>
@@ -29,3 +35,4 @@
     <script src="js/productlist.js"></script>
   </body>
 </html>
+
