--- a/product.html
+++ b/product.html
@@ -19,7 +19,7 @@
           <li>
             <a class="logo" href="index.html"><img src="assets/activewear.png" alt="logo" /></a>
           </li>
-          <li><a href="product-list.html">PRODUCTS</a></li>
+          <li><a href="#">PRODUCTS</a></li>
           <li><a href="#">ABOUT</a></li>
           <li><a href="#">CART</a></li>
         </ul>
