--- a/product-list.html
+++ b/product-list.html
@@ -28,6 +28,12 @@
   <button data-gender="Men">Men</button>
   <button data-gender="Women">Women</button>
 </section>
+<section id="sorting">
+  <button data-direction="lohi">pris lav til høj</button>
+  <button data-direction="hilo">pris høj til lav</button>
+</section>
+
+
     <main id="productContainer">
       </section>
     </main>
